added lindas bio, removed a button from signup page

--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -7,12 +7,12 @@
   <div class='row'>
     <div class='span16' id="accordion">
       <p>
-        Silicon Valley Prep is offering a variety of courses this year. Please click on the course title to expand and view the course description and curriculum.
+        Silicon Valley Prep is offering a variety of courses this year. Each course is taught by college students who had excelled in their field during their high school career.
       </p>
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#java">Introduction to Java & Computer Science ($450 / 5 weeks)</a></h2>
-      <div id="java" class="collapse">
-        <h5>San Jose - (Saturday 10AM - 1PM, Sunday 2PM - 5PM)</h5>
-        <h5 class="course-subheader">Intended for students entering grades 6-12</h5>
+      <h2>Introduction to Java & Computer Science ($450 / 5 weeks)</h2>
+      <div id="java">
+        <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - (Saturday 10AM - 1PM, Sunday 2PM - 5PM)</h5>
+        <h5 class="course-subheader">Intended for students entering grades 7-10</h5>
         <p>
           This course will be focused on introducing students to the fundamentals of computer science. Students will be taught how to program in Java and will learn the basic concepts of programming. This course will prepare students to make small applications on their own and will also provide them with enough knowledge to participate in the USA Computing Olympiad at the beginner level.
         </p>
@@ -28,10 +28,10 @@
           </ul>
         </p>
       </div>
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#pubsp">Public Speaking ($450 / 5 weeks)</a></h2>
-      <div id="pubsp" class="collapse">
+      <h2>Public Speaking ($450 / 5 weeks)</h2>
+      <div id="pubsp">
         <!-- <h4 class="course-instructor">Course instructors: Carl Shan and Ashwin Aravind</h4> -->
-        <h5>San Jose - (Saturday 2PM - 5PM, Sunday 10AM - 1PM)</h5>
+        <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - (Saturday 2PM - 5PM, Sunday 10AM - 1PM)</h5>
         <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM, Saturday 2PM - 5PM)</h5> -->
         <h5 class="course-subheader">Intended for students entering grades 4-9</h5>
         <p>
@@ -39,12 +39,12 @@
         </p>
       </div>
   
-      <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#debarg">Debate & Argumentation ($450 / 5 weeks)</a></h2>
-      <div id="debarg" class="collapse">
+      <h2>Debate & Argumentation ($450 / 5 weeks)</h2>
+      <div id="debarg">
         <!-- <h4 class="course-instructor">Course instructors: Alan Kao</h4> -->
-        <h5>San Jose - (Saturday 10AM - 1 PM, Sunday 10AM - 1PM)</h5>
+        <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - (Sunday 10AM - 1PM)</h5>
         <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM)</h5> -->
-        <h5 class="course-subheader">Intended for students entering grades 5-9</h5>
+        <h5 class="course-subheader">Intended for students entering grades 7-10</h5>
         <p>
 		      Students will learn the basic structure of a debate case, going over how to effectively research, organize a persuasive essay, and choose specific pieces of evidence that would best influence an audience. Students will learn basic debate jargon and technical terms, improving their ability to write a debate case quickly with specific points in mind. This course will also focus on the nuances of an argument, including discussion on the three specific components that comprise a formal argument. In addition, students will learn the usage of Cross-Examination, a period of time in debate during when opposing debaters are allowed to question each other, in strategic and valuable ways to enhance your own chances of winning while setting your opponents up to losing the argument.
         </p>
@@ -56,6 +56,29 @@
             <li>Strategies and techniques for success</li>
             <li>How to refute opposing arguments</li>
             <li>Eloquent delivery and presentation</li>
+          </ul>
+        </p>
+      </div>
+      <h2>Introduction to Physics Mechanics ($450 / 5 weeks)</h2>
+      <div id="debarg">
+        <!-- <h4 class="course-instructor">Course instructors: Alan Kao</h4> -->
+        <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - Sunday 10AM - 1PM</h5>
+        <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM)</h5> -->
+	<h5 class="prereq-subhead">Prerequisites: Algebra, Geometry (recommended)</h5>
+        <h5 class="course-subheader">Intended for students entering grades 7-10</h5>
+        <p>
+		Students will be able to explore the beauty behind physics mechanics. This course is designed for students with a strong mathematical backgrounds who want to get a jump start in their science education. This course will go over the fundamental Physics Mechanics principles in a fun and immersive experience. The curriculum will focus on building an intiution for general concepts while teaching various subjects that will be relevant in preparation for sections of the SAT II Physics and AP Physics C - Mechanics exam.
+        </p>
+        <p>
+          The course will cover the following topics:
+          <ul>
+            <li>Vectors, vector algebra</li>
+            <li>Coordinate systems, displacement, velocity, acceleration</li>
+            <li>Kinematics (motion in one diemsnion, motion in two dimension)</li>
+            <li>Static Equilibrium</li>
+            <li>Dynamics of a single particle</li>
+            <li>Systems of two or more bodies</li>
+            <li>Work, energy, and power</li>
           </ul>
         </p>
       </div>
