--- a/views/instructors.ejs
+++ b/views/instructors.ejs
@@ -15,7 +15,7 @@
       <div class='span14'>
         <h4>Gerald Fong, Organizer & Instructor</h4>
         <p>
-	Gerald Fong is a second year at UC Berkeley studying Electrical Engineering and Computer Science. He started his interest for computer science in highschool when he took 8 CS courses from Lynbrook and De Anza College. His senior year, he interned at a startup called RewardMe when he got he developed J2EE Java Web Applications. This past summer, Gerald interned at Twitter and since freshmen year he has been offered internships at companies including Google, Facebook, LinkedIn, and Dropbox. This coming summer, he is interning at Stripe to make a bigger impact in the start-up world. During high school he was valedictorian and graduation speaker with a 4.0 unweighted GPA and a 4.7 weighted GPA. He has also attained 800 in SAT II Physics and 800 in SAT II Math. At Lynbrook was served as Vice President of his class, Vice President of the Model UN club, President of the piano club, and an Eagle Scout from Troop 495. Gerald is excited to take his academic and industry experiences to teach the next generation!
+	Gerald Fong is a second year at UC Berkeley studying Electrical Engineering and Computer Science pursuing a 4 year Bachelors and Masters program focusing on Artificial Intelligence. He started his interest in EE&CS when he took eight CS courses and completed an internship during high school that lead to a patent pending in Data Warehousing algorithms. Since then he has interned at Twitter and has been offered internships at companies including Google, Facebook, LinkedIn, and Dropbox. He has also competed in various hackathons alongside Sharad Vikram winning first place in over four hackathons. Gerald has also been an active leader in other areas. At Lynbrook, he was valedictorian graduation speaker and served as Class Vice President, Vice President of the Model UN Club, President of the Piano Club, and attained Eagle Scout Rank in Troop 495. Gerald is excited to take his academic and industry experiences to teach the next generation! 
         </p>
       </div>
     </div>
@@ -55,7 +55,20 @@
       <div class='span14'>
         <h4>Alan Kao, Instructor - Debate & Argumentation</h4>
         <p>
-          Alan is currently a freshman at UC Berkeley, pursuing dual Bachelors degree in Computer Science and Statistics. Having a strong interest in computer programming, Alan’s interest in data driven software development has led to his being offered a position at IBM’s Almaden Research Center for database related work. Further, Alan also has a strong background in  logical reasoning, debate, and public speaking; having qualified to the most prestigious debate tournament twice in his high school career and served as Lynbrook High School’s co-president for debate from 2010-2011, Alan is excited to teach share everything that he can with his students!
+	  Alan is currently a Sophomore at UC Berkeley, pursuing dual Bachelors degree in Computer Science and Statistics. Having a strong interest in computer programming, Alan’s interest in data driven software development has led to his current position at IBM's Silicon Valley Laboratory. Further, Alan also has a strong background in logical reasoning, debate, and public speaking; having qualified to the most prestigious debate tournament twice in his high school career and served as Lynbrook High School’s co-president for debate from 2010-2011, Alan is excited to teach share everything that he can with his students!
+        </p>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='span2'>
+        <p>
+          <img alt='Linda' src='/images/facepics/linda.png' width='100' />
+        </p>
+      </div>
+      <div class='span14'>
+        <h4>Linda Xu, Instructor - Introduction to Physics Mechanics</h4>
+        <p>
+		Linda is currently a sophomore Physics & Math student at MIT. In high school, she received an 800 on the Physics SAT II and 5/5 on both AP Physics C: Mechanics and Electricity & Magnetism. She has also won numerous awards for her astrophysics research at Intel International Science & Engineering Fair (ISEF) and Intel Science Talent Search (STS). She is currently doing research on a new field of gravitational lensing, knows the connection between holographic superconductors and black hole lasers, learned about electroweak unification and thinks it's the coolest thing ever.
         </p>
       </div>
     </div>
