--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,12 +23,13 @@
   <div class='topbar'>
     <div class='header'>
       <div class='container'>
-        <div class='brand' href='/' title='Silicon Valley Prep'>
+        <a href="/"> <div class='brand' title='Silicon Valley Prep'>
           <!-- <img alt='Fleetio Logo' height='28' src='/images/fleetio-logo-drk-clrarrow-trans-111x28.png' width='111' /> -->
 		      Silicon Valley Prep
         </div>
+	</a>
         <h1 class='site-title'>
-          <a href='/' title='Online vehicle and fleet maintenance management'>
+          <a href='/' title='Innovative Teaching Using the Silicon Valley Standard'>
             SVPrep
           </a>
         </h1>
@@ -154,7 +155,7 @@
         <div class='row'>
           <div class='span10'>
             <h3 id='phone'>
-              Instant Support Line: 1-408-667-0178
+              Instant Support Line: 1-408-796-8978
             </h3>
             <p>
               &copy; 2011-2013 <a href="/" title="SVPrep">SVPrep, Inc.</a> All Rights Reserved.
