--- a/views/logistics.ejs
+++ b/views/logistics.ejs
@@ -28,11 +28,11 @@
       </p>
       <h3>Location</h3>
       <p>
-        Silicon Valley Prep has one location in the San Jose / Cupertino area. Please take a look at the <a href="/courses">courses page</a> to see where each course is offered. Unfortunately we've had to get rid of our Fremont location because of logistical issues and will only be offering classes in the San Jose / Cupertino area this summer. People from Fremont are more than welcome to come take classes in our other locations!
+        Silicon Valley Prep has one location in the San Jose / Cupertino area. Please take a look at the <a href="/courses">courses page</a> to see where each course is offered. 
         <!-- <h5>San Jose</h5> -->
         <ul>
           <!-- <li><b>Location 1</b>: Dilworth Elementary School at 1101 Strayer Drive, San Jose, CA 95129</li> -->
-          <li><b>Location</b>: TBA</li>
+          <li><b>Location</b>: Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129</li>
         </ul>
         <!-- <h5>Fremont/Milpitas</h5>
         <ul>
