--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -204,7 +204,7 @@
         </div>
       </div>
       <div class="form-actions">
-        <button type="submit" class="btn success">Submit</button>
+        <!--<button type="submit" class="btn success">Submit</button>-->
 	<script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button" data-key="pk_test_czwzkTp2tactuLOEOqbMTRzG"></script>
       </div>
     </fieldset>
