--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -1,13 +1,13 @@
 <div class='hero'>
   <div class='container'>
-    <h1>Courses & Pricing</h1>
+    <h1>Summer 2013 Courses & Pricing</h1>
   </div>
 </div>
 <div class='container content'>
   <div class='row'>
     <div class='span16' id="accordion">
       <p>
-        Silicon Valley Prep is offering a variety of courses this year. Each course is taught by college students who had excelled in their field during their high school career.
+      Silicon Valley Prep is offering a variety of courses for Summer 2013. Each course is taught by college students who had excelled in their field during their high school career. For details such as start an end date and location, visit <a href="/logistics">Timings & Location</a>.
       </p>
       <h2>Introduction to Java & Computer Science ($450 / 5 weeks)</h2>
       <div id="java">
@@ -33,7 +33,7 @@
         <!-- <h4 class="course-instructor">Course instructors: Carl Shan and Ashwin Aravind</h4> -->
         <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - (Saturday 2PM - 5PM, Sunday 10AM - 1PM)</h5>
         <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM, Saturday 2PM - 5PM)</h5> -->
-        <h5 class="course-subheader">Intended for students entering grades 4-9</h5>
+        <h5 class="course-subheader">Intended for students entering grades 5-9</h5>
         <p>
           This course will emphasize the teaching of confidence-building skills, public speaking techniques and principles for succeeding in life. The class will be oriented around both learning how to write and speak effectively, and will culminate in a class project that will ask students to create a final speech and present it to an audience of parents and peers. This class will revolve around the instruction of not only public speaking, but also life lessons. We hope to be a positive role model for all of our students.
         </p>
@@ -42,7 +42,7 @@
       <h2>Debate & Argumentation ($450 / 5 weeks)</h2>
       <div id="debarg">
         <!-- <h4 class="course-instructor">Course instructors: Alan Kao</h4> -->
-        <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - (Sunday 10AM - 1PM)</h5>
+        <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - Sunday 10AM - 1PM</h5>
         <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM)</h5> -->
         <h5 class="course-subheader">Intended for students entering grades 7-10</h5>
         <p>
@@ -59,10 +59,20 @@
           </ul>
         </p>
       </div>
+      <h2>Essay Writing & Journalism ($450 / 5 weeks)</h2>
+      <div id="essayWriting">
+        <!-- <h4 class="course-instructor">Course instructors: Alan Kao</h4> -->
+        <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - Saturday 2PM - 5PM</h5>
+        <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM)</h5> -->
+        <h5 class="course-subheader">Intended for students entering grades 5-9</h5>
+        <p>
+        Essay writing is one of the most important, but often undertaught, subjects in the field of education. Silicon Valley Prep’s Essay Writing and Journalism class will be an introduction into the proper planning, structuring and writing that goes into crafting both an exemplary essay and a piece of journalism. This course will help students develop their reading and writing skills, as they learn tools to analyze a piece of writing and create their own. Students will study several forms of writing, including poetry, persuasive speeches, and expository essays, as well as different styles, which range from creative free form to concise wording used for academia. Students who enroll in this course will be introduced to many high-level strategies for tackling intimidating essay prompts or subjects, such as those given in the SAT, SAT II Subject, and AP tests.
+        </p>
+      </div>
       <h2>Introduction to Physics Mechanics ($450 / 5 weeks)</h2>
       <div id="debarg">
         <!-- <h4 class="course-instructor">Course instructors: Alan Kao</h4> -->
-        <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - Sunday 10AM - 1PM</h5>
+        <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - Saturday 10AM - 1PM</h5>
         <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM)</h5> -->
 	<h5 class="prereq-subhead">Prerequisites: Algebra, Geometry (recommended)</h5>
         <h5 class="course-subheader">Intended for students entering grades 7-10</h5>
