--- a/views/discounts.ejs
+++ b/views/discounts.ejs
@@ -6,6 +6,10 @@
 <div class='container content'>
   <div class='row'>
     <div class='span16'>
+      <h3>Early Bird Discount</h3>
+      <p>
+        If you register by April 10th, you will receive a <b>$25</b> off your total purchase price.
+      </p>
       <h3>Multiple Class Discount</h3>
       <p>
 		For each additional class you sign up for after the first one, you will receive <b>$50</b> off your total. For example, if you sign up for three classes, you will get a $100 discount from your total purchase price.
