--- a/views/logistics.ejs
+++ b/views/logistics.ejs
@@ -16,7 +16,7 @@
       </p>
       <h3>Timings</h3>
       <p>
-        Silicon Valley Prep classes will be held only on weekends. Please take a look at the <a href="/courses">courses page</a> to find out when each course is offered on the weekend.
+        Classes will be held only on weekends. Please take a look at the <a href="/courses">courses page</a> to find out when each course is offered on the weekend.
       <p>
         Class will be offered:
         <ul>
@@ -28,7 +28,7 @@
       </p>
       <h3>Location</h3>
       <p>
-        Silicon Valley Prep has one location in the San Jose / Cupertino area. Please take a look at the <a href="/courses">courses page</a> to see where each course is offered. 
+        Courses are held in the San Jose / Cupertino area.
         <!-- <h5>San Jose</h5> -->
         <ul>
           <!-- <li><b>Location 1</b>: Dilworth Elementary School at 1101 Strayer Drive, San Jose, CA 95129</li> -->
