--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,18 @@
     <div class='hero ac'>
       <div class='container'>
         <h2>Innovative teaching using the Silicon Valley standards</h2>
-		<br />
-		<div id="myCarousel" class="carousel">
-		  <!-- Carousel items -->
-		  <div class="carousel-inner">
-		    <div class="active item"><img src="/images/carousel/math-blackboard.png"></div>
-		    <div class="item"><img src="/images/carousel/students-writing.png"></div>
-		    <!-- <div class="item"><img src=""></div> -->
-		  </div>
-		  <!-- Carousel nav
-		  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-		  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a> -->
-		</div>
+        <br />
+        <div id="myCarousel" class="carousel slide">
+          <!-- Carousel items -->
+          <div class="carousel-inner">
+            <div class="active item"><img src="/images/carousel/math-blackboard.png"></div>
+            <div class="item"><img src="/images/carousel/students-writing.png"></div>
+            <!-- <div class="item"><img src=""></div> -->
+          </div>
+          <!-- Carousel nav
+          <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+          <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a> -->
+        </div>
         <div class='big-media'>
         </div>
       </div>
@@ -21,25 +21,25 @@
       <div class='row'>
         <div class='span12'>
           <h2>
-            "The class was a huge success and I would recommend it to all my friends who have kids who are eager to learn."
+            "When classes started, I was surprised to notice great things happening to both my children."
           </h2>
           <small>
-            Parent (2011 Camp)
+            Parent (2012 Camp)
           </small>
         </div>
         <div class='span4'>
           <p class='ac'>
-            <a class='btn huge success' href='/courses' style='width:90%' title='View Course Offerings'>
-              <strong>
-                View Course Offerings
-              </strong>
-            </a>
+          <a class='btn huge success' href='/courses' style='width:90%' title='View Course Offerings'>
+            <strong>
+              View Course Offerings
+            </strong>
+          </a>
           </p>
-    		  <h3 class="ac" style='line-height: 20px;'>
+          <h3 class="ac" style='line-height: 20px;'>
             <small>
-    			    First class is FREE!
+              First class is FREE!
             </small>
-    		  </h3>
+          </h3>
           <!-- <h3 class='ac' style='line-height: 1;'>
             100% GUARANTEE
             <br />
@@ -54,15 +54,37 @@
         <div class='span8'>
           <div class='row'>
             <div class='span1'>
-              <div class='benefit-icon' id='personalized-courses'></div>
+              <div class='benefit-icon' id='innovative-courses'></div>
             </div>
             <div class='span7'>
-              <h3>Personalized Courses</h3>
+              <h3>Innovative Courses for Innovative Times</h3>
               <p>
-                We offer your students the highest quality attention through not only our classes, but instructors will hold office hours for students to come in and receive 1-on-1 feedback and attention.
+              Silicon Valley Prep recognizes that we’ve entered a new era. Our courses reflect our deep commitment towards preparing our students for the future. We teach classes such as Introduction to Programming in Java, Public Speaking, and Debate & Argumentation.
               </p>
             </div>
           </div>
+          <div class='row'>
+            <div class='span1'>
+              <div class='benefit-icon' id='peer-instructors'></div>
+            </div>
+            <div class='span7'>
+              <h3>Great Reviews for Two Years and Counting</h3>
+              <p>
+              "Every single parent knows the importance of improving their children's public speech skills. Therefore, I believe many parents in the Bay Area have sent their children to some sort of extracurricular classes before, and I'm one of them. Here are my key observations of how the SVPrep programs make a difference: 
+              </br></br>
+
+              <strong>1. Passion.</strong> The young teachers at SVPrep have shown their strong passion to pass their successful learning experience to their students. They went the extra mile and used their personal time to work with individual students, which you usually do not see in other summer programs. 
+
+              </br></br>
+              <strong>2. Age difference.</strong> All teachers are so young that they really understand their students while their students find easier to interact with their teachers. Meanwhile, the teachers still have authority that students follow their instructions."
+              </p>
+              <p>
+              Parent (Summer 2012)
+              </p>
+            </div>
+          </div>  
+        </div>
+        <div class='span8'>
           <div class='row'>
             <div class='span1'>
               <div class='benefit-icon' id='we-care'></div>
@@ -70,12 +92,21 @@
             <div class='span7'>
               <h3>Simply Put: We Care</h3>
               <p>
-                Our classes are taught by people who are not only experienced in their subject but also have a deep understanding of how to teach others. Silicon Valley Prep heavily emphasizes the importance of having our instructors understand our culture of commitment to students. All of our teachers will deliver only the highest quality educational experiences.
+              Our classes are taught by people who are not only experienced in their subject but also have a deep understanding of how to teach others. Silicon Valley Prep heavily emphasizes the importance of having our instructors understand our culture of commitment to students. All of our teachers will deliver only the highest quality educational experiences.
               </p>
             </div>
           </div>
-        </div>
-        <div class='span8'>
+          <div class='row'>
+            <div class='span1'>
+              <div class='benefit-icon' id='personalized-courses'></div>
+            </div>
+            <div class='span7'>
+              <h3>Personalized Courses</h3>
+              <p>
+              We offer your students the highest quality attention through not only our classes, but instructors will hold office hours for students to come in and receive 1-on-1 feedback and attention.
+              </p>
+            </div>
+          </div>
           <div class='row'>
             <div class='span1'>
               <div class='benefit-icon' id='peer-instructors'></div>
@@ -83,21 +114,10 @@
             <div class='span7'>
               <h3>Excellent Peer Instructors</h3>
               <p>
-                Don’t settle for other programs who hire 50 year old teachers that haven’t seen the material in over 30 years. At Silicon Valley Prep, we only hire instructors that students can relate to and have had deep recent exposure in the subject.
+              Don’t settle for other programs who hire 50 year old teachers that haven’t seen the material in over 30 years. At Silicon Valley Prep, we only hire instructors that students can relate to and have had deep recent exposure in the subject.
               </p>
               <p>
-                Our instructors have won National Debate Tournaments, published articles in prestigious newspapers, received multiple job offers from companies like Google, Facebook, and Twitter, and hail from universities like Stanford, Yale and UC Berkeley.
-              </p>
-            </div>
-          </div>
-          <div class='row'>
-            <div class='span1'>
-              <div class='benefit-icon' id='innovative-courses'></div>
-            </div>
-            <div class='span7'>
-              <h3>Innovative Courses for Innovative Times</h3>
-              <p>
-                Silicon Valley Prep recognizes that we’ve entered a new era. Our courses reflect our deep commitment towards preparing our students for the future. We teach classes like Introduction to Programming in Java, Public Speaking, and Debate & Argumentation.
+              Our instructors have won National Debate Tournaments, published articles in prestigious newspapers, received multiple job offers from companies like Google, Facebook, and Twitter, and hail from universities such as UC Berkeley and MIT.
               </p>
             </div>
           </div>
@@ -114,8 +134,8 @@
       </blockquote> -->
       <div class='well ac'>
         <h3><a href='/courses' title='Check out our courses'>Check out our courses</a>,
-          <a href='/faq' title='read our FAQ'>
-            read the FAQ
+          <a href='/instructors' title='times and location'>
+            read about our instructors
           </a>
           or
           <a href='/signup' title='sign up now!'>
