--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,16 +2,25 @@
       <div class='container'>
         <h2>Innovative teaching using the Silicon Valley standards</h2>
         <br />
-        <div id="myCarousel" class="carousel slide">
+        <div id="myCarousel" class="carousel"> 
+          <!-- Carousel indicators 
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1" ></li>
+            <li data-target="#myCarousel" data-slide-to="2" ></li>
+          </ol>-->
           <!-- Carousel items -->
           <div class="carousel-inner">
-            <div class="active item"><img src="/images/carousel/math-blackboard.png"></div>
+            <div class="active item"><img src="images/carousel/berkeleyCollege.png"></div>
+            <div class="item"><img src="/images/carousel/math-blackboard.png"></div>
+            <div class="item"><img src="images/carousel/mitCollage.png"></div>
             <div class="item"><img src="/images/carousel/students-writing.png"></div>
             <!-- <div class="item"><img src=""></div> -->
           </div>
           <!-- Carousel nav
           <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-          <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a> -->
+          <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+          -->
         </div>
         <div class='big-media'>
         </div>
