--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -176,6 +176,7 @@
   </footer>
   <script src='//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
   <script src='//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js'></script>
+  <script src='/js/bootstrap-transition.js'></script>
   <script src='/js/jquery.colorbox-min.js'></script>
   <script src='/js/bootstrap-twipsy.js'></script>
   <script src='/js/bootstrap-popover.js'></script>
@@ -198,7 +199,7 @@
       // });
     });
   	$('#myCarousel').carousel({
-  	  interval: 2000
+  	  interval: 5000
   	});
   </script>
   <script type="text/javascript">
