updated website with stripe popup

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3037,3 +3037,7 @@ ol.sequence li .range {
 	background-color: #ede;
 	padding-right: 14px;
 }
+.whatisstripe {
+    margin-left:5px;
+    font-size: 1.2em;
+}
