--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -47,18 +47,16 @@
               <center><h5>Saturday 10AM - 1PM</h5></center>
               <select id="sat101-a" name="sat101-a" class="span5">
                 <option value="noclass-sat101-a">No class selected</option>
-                <option value="java-sat101-a-sj">Intro to Java & Computer Science - grades 6-10</option>
-                <!-- <option value="java-sat101-a-f">Intro to Java & Computer Science - grades 6-8 (Milpitas)</option>
-                <option value="pubsp-sat101-a-f">Public Speaking - grades 4-6 (Milpitas)</option>
-                <option value="debarg-sat101-a-f">Debate & Argumentation - grades 6-9 (Milpitas)</option> -->
+                <option value="java-sat101-a">Intro to Java & Computer Science - grades 7-10</option>
+                <option value="physmech-sat101-a">Introduction to Physics Mechanics - grades 7-10</option>
               </select>
             </div>
             <div class="span6 center courses-separator-vertical">
               <center><h5>Sunday 10AM - 1PM</h5></center>
               <select id="sun101-a" name="sun101-a" class="span5">
                 <option value="noclass-sun101-a">No class selected</option>
-                <option value="pubsp-sun101-a-sj">Public Speaking - grades 4-6</option>
-                <option value="debarg-sun101-a-sj">Debate & Argumentation - grades 6-9</option>
+                <option value="pubsp-sun101-a">Public Speaking - grades 5-9</option>
+                <option value="debarg-sun101-a">Debate & Argumentation - grades 7-10</option>
               </select>
             </div>
           </div>
@@ -68,22 +66,15 @@
               <center><h5>Saturday 2PM - 5PM</h5></center>
               <select id="sat25-a" name="sat25-a" class="span5">
                 <option value="noclass-sat25-a">No class selected</option>
-                <option value="pubsp-sat25-a-sj">Public Speaking - grades 7-9</option>
-                <option value="debarg-sat25-a-sj">Debate & Argumentation - grades 6-9</option>
-                <!-- <option value="physsat2-sat25-a-sj">Small Group Tutoring for AP Physics C - grades 9-12</option> -->
-                <!-- <option value="mathsat2-sat25-a-sj">Small Group Tutoring to Prepare for the Pre-Calculus Placement Exam - grades 9-12</option> -->
-                <!-- <option value="java-sat25-a-f">Intro to Java & Computer Science - grades 9-12 (Milpitas)</option>
-                <option value="pubsp-sat25-a-f">Public Speaking - grades 7-9 (Milpitas)</option> -->
+                <option value="esswrit-sat25-a">Essay Writing & Journalism - grades 5-9</option>
+                <option value="pubsp-sat25-a">Public Speaking - grades 5-9</option>
               </select>
             </div>
             <div class="span6 center courses-separator-vertical">
               <center><h5>Sunday 2PM - 5PM</h5></center>
               <select id="sun25-a" name="sun25-a" class="span5">
                 <option value="noclass-sun25-a">No class selected</option>
-                <option value="java-sun25-a-sj">Intro to Java & Computer Science - grades 6-10</option>
-                <!-- <option value="hssuper-sun25-a-sj">How to be a Highschool Superstar - grades 9-11</option> -->
-                <!-- <option value="chemsat2-sun25-a-sj">Small Group Tutoring for AP Chemistry - grades 9-12</option> -->
-                <!-- <option value="biosat2-sun25-a-sj">Small Group Tutoring for AP Biology - grades 9-12</option> -->
+                <option value="java-sun25-a">Intro to Java & Computer Science - grades 7-10</option>
               </select>
             </div>
           </div>
@@ -91,25 +82,23 @@
         </div>
       </div>
       <div class="control-group">
-        <label class="control-label" for="optionsCheckbox">Courses - <b>Session B<br /><i>(July 21 - August 16)</i></b></label>
+        <label class="control-label" for="optionsCheckbox">Courses - <b>Session B<br /><i>(June 21 - August 16)</i></b></label>
         <div class="controls">
           <div class="row">
             <div class="span6 center">
               <center><h5>Saturday 10AM - 1PM</h5></center>
               <select id="sat101-b" name="sat101-b" class="span5">
                 <option value="noclass-sat101-b">No class selected</option>
-                <option value="java-sat101-b-sj">Intro to Java & Computer Science - grades 6-10</option>
-                <!-- <option value="java-sat101-b-f">Intro to Java & Computer Science - grades 6-8 (Milpitas)</option>
-                <option value="pubsp-sat101-b-f">Public Speaking - grades 4-6 (Milpitas)</option>
-                <option value="debarg-sat101-b-f">Debate & Argumentation - grades 6-9 (Milpitas)</option> -->
+                <option value="java-sat101-b">Intro to Java & Computer Science - grades 7-10</option>
+                <option value="physmech-sat101-b">Introduction to Physics Mechanics - grades 7-10</option>
               </select>
             </div>
             <div class="span6 center courses-separator-vertical">
               <center><h5>Sunday 10AM - 1PM</h5></center>
               <select id="sun101-b" name="sun101-b" class="span5">
                 <option value="noclass-sun101-b">No class selected</option>
-                <option value="pubsp-sun101-b-sj">Public Speaking - grades 4-6</option>
-                <option value="debarg-sun101-b-sj">Debate & Argumentation - grades 6-9</option>
+                <option value="pubsp-sun101-b">Public Speaking - grades 5-9</option>
+                <option value="debarg-sun101-b">Debate & Argumentation - grades 7-10</option>
               </select>
             </div>
           </div>
@@ -119,25 +108,19 @@
               <center><h5>Saturday 2PM - 5PM</h5></center>
               <select id="sat25-b" name="sat25-b" class="span5">
                 <option value="noclass-sat25-b">No class selected</option>
-                <option value="pubsp-sat25-b-sj">Public Speaking - grades 7-9</option>
-                <option value="debarg-sat25-b-sj">Debate & Argumentation - grades 6-9</option>
-                <!-- <option value="physsat2-sat25-b-sj">Small Group Tutoring for AP Physics C - grades 9-12</option> -->
-                <!-- <option value="mathsat2-sat25-b-sj">Small Group Tutoring to Prepare for the Pre-Calculus Placement Exam - grades 9-12</option> -->
-                <!-- <option value="java-sat25-b-f">Intro to Java & Computer Science - grades 9-12 (Milpitas)</option>
-                <option value="pubsp-sat25-b-f">Public Speaking - grades 7-9 (Milpitas)</option> -->
+                <option value="esswrit-sat25-b">Essay Writing & Journalism - grades 5-9</option>
+                <option value="pubsp-sat25-b">Public Speaking - grades 5-9</option>
               </select>
             </div>
             <div class="span6 center courses-separator-vertical">
               <center><h5>Sunday 2PM - 5PM</h5></center>
-              <select id="sun25-b" name="sun25-b" class="span5">
+              <select id="sun25-a" name="sun25-b" class="span5">
                 <option value="noclass-sun25-b">No class selected</option>
-                <option value="java-sun25-b-sj">Intro to Java & Computer Science - grades 6-10</option>
-                <!-- <option value="hssuper-sun25-b-sj">How to be a Highschool Superstar - grades 9-11</option> -->
-                <!-- <option value="chemsat2-sun25-b-sj">Small Group Tutoring for AP Chemistry - grades 9-12</option> -->
-                <!-- <option value="biosat2-sun25-b-sj">Small Group Tutoring for AP Biology - grades 9-12</option> -->
+                <option value="java-sun25-b">Intro to Java & Computer Science - grades 7-10</option>
               </select>
             </div>
           </div>
+          <hr class="session-separator-horizontal" id="sun101">
         </div>
       </div>
       <div class="control-group">
@@ -204,8 +187,25 @@
         </div>
       </div>
       <div class="form-actions">
-        <!--<button type="submit" class="btn success">Submit</button>-->
-	<script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button" data-key="pk_test_czwzkTp2tactuLOEOqbMTRzG"></script>
+        <div id="whatIsStripe" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="myModalLabel">What is Stripe?</h3>
+          </div>
+          <div class='modal-body'>
+            <p>
+                <a target="_blank" href='https://www.stripe.com'>Stripe</a> is an online payment tool like PayPal. It is safe and secure and you will not be charged for anything beyond the classes you sign up for.
+            </p>
+            <p>
+              Stripe accepts Visa, Mastercard, American Express, JCB, Discover, and Diners Club.
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+          </div>
+        </div>
+        <script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button" data-key="pk_test_czwzkTp2tactuLOEOqbMTRzG"></script>
+        <a href="#whatIsStripe" role="button" class="whatisstripe" data-toggle="modal">What is Stripe?</a>
       </div>
     </fieldset>
   </form>
