--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -178,6 +178,7 @@
   <script src='//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js'></script>
   <script src='/js/bootstrap-transition.js'></script>
   <script src='/js/jquery.colorbox-min.js'></script>
+  <script src='/js/bootstrap.min.js'></script>
   <script src='/js/bootstrap-twipsy.js'></script>
   <script src='/js/bootstrap-popover.js'></script>
   <script src='/js/bootstrap-modal.js'></script>
