put stripe text on page

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -205,7 +205,12 @@
           </div>
         </div>
         <script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button" data-key="pk_test_czwzkTp2tactuLOEOqbMTRzG"></script>
-        <a href="#whatIsStripe" role="button" class="whatisstripe" data-toggle="modal">What is Stripe?</a>
+        <p>
+            <i class="icon-lock"></i>
+            We are using a modern payment processing system called <a target="_blank" href='https://www.stripe.com'>Stripe</a>. It is more safe, secure and convenient than PayPal.
+            Stripe accepts Visa, Mastercard, American Express, JCB, Discover, and Diners Club.
+        </p>
+        <!-- <a href="#whatIsStripe" role="button" class="whatisstripe" data-toggle="modal">What is Stripe?</a> -->
       </div>
     </fieldset>
   </form>
