--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -204,12 +204,18 @@
             <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
           </div>
         </div>
-        <script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button" data-key="pk_test_czwzkTp2tactuLOEOqbMTRzG"></script>
+        <p>
+          <script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button" data-key="pk_test_czwzkTp2tactuLOEOqbMTRzG"></script>
+        </p>
+        <!--<div class='stripe'>
+          <img src='/images/stripe.png' width='50px'>
+        </div>-->
         <p>
             <i class="icon-lock"></i>
             We are using a modern payment processing system called <a target="_blank" href='https://www.stripe.com'>Stripe</a>. It is more safe, secure and convenient than PayPal.
             Stripe accepts Visa, Mastercard, American Express, JCB, Discover, and Diners Club.
         </p>
+        <img src='/images/credit_cards.png' width='150px'>
         <!-- <a href="#whatIsStripe" role="button" class="whatisstripe" data-toggle="modal">What is Stripe?</a> -->
       </div>
     </fieldset>
