--- a/views/layout_ch.ejs
+++ b/views/layout_ch.ejs
@@ -25,60 +25,60 @@
   <div class='topbar'>
     <div class='header'>
       <div class='container'>
-        <a href="/"> <div class='brand' title='Silicon Valley Prep'>
+        <a href="/?lang=ch"> <div class='brand' title='Silicon Valley Prep'>
           <!-- <img alt='Fleetio Logo' height='28' src='/images/fleetio-logo-drk-clrarrow-trans-111x28.png' width='111' /> -->
 		      Silicon Valley Prep
         </div>
 	</a>
         <h1 class='site-title'>
-          <a href='/' title='Innovative Teaching Using the Silicon Valley Standard'>
+          <a href='/?lang=ch' title='Innovative Teaching Using the Silicon Valley Standard'>
             SVPrep
-          </a>
+          </a>Feel free to email us with any questions, comments, etc. at contact@svprep.org.
         </h1>
         <ul class='nav'>
           <li>
-            <a class='<%= page == "home" ? "btn disabled" : "" %>' href='/'>
-              Home
+            <a class='<%= page == "home" ? "btn disabled" : "" %>' href='/?lang=ch'>
+              首页
             </a>
           </li>
           <li>
-            <a class='<%= page == "instructors" ? "btn disabled" : "" %>' href='/instructors'>
-              Instructors
+            <a class='<%= page == "instructors" ? "btn disabled" : "" %>' href='/instructors?lang=ch'>
+              老师
             </a>
           </li>
           <li>
-            <a class='<%= page == "courses" ? "btn disabled" : "" %>' href='/courses'>
-              Courses & Pricing
+            <a class='<%= page == "courses" ? "btn disabled" : "" %>' href='/courses?lang=ch'>
+              课程价格
             </a>
           </li>
           <li>
-            <a class='<%= page == "logistics" ? "btn disabled" : "" %>' href='/logistics'>
-              Timings & Location
+            <a class='<%= page == "logistics" ? "btn disabled" : "" %>' href='/logistics?lang=ch'>
+              时序及地点
             </a>
           </li>
           <li>
-            <a class='<%= page == "testimonials" ? "btn disabled" : "" %>' href='/testimonials'>
-              Testimonials
+            <a class='<%= page == "testimonials" ? "btn disabled" : "" %>' href='/testimonials?lang=ch'>
+              证明
             </a>
           </li>
           <li>
-            <a class='<%= page == "faq" ? "btn disabled" : "" %>' href='/faq'>
-              FAQ
+            <a class='<%= page == "faq" ? "btn disabled" : "" %>' href='/faq?lang=ch'>
+              常问问题
             </a>
           </li>
           <li>
-            <a class='<%= page == "discounts" ? "btn disabled" : "" %>' href='/discounts'>
-              Discounts
+            <a class='<%= page == "discounts" ? "btn disabled" : "" %>' href='/discounts?lang=ch'>
+              折扣
             </a>
           </li>
           <li>
-            <a class='btn primary' href='/signup' title='Sign Up'>
-              Sign Up
+            <a class='btn primary' href='/signup?lang=ch' title='Sign Up'>
+              登录
             </a>
           </li>
           <li>
-            <a class='switch' href='/?lang=ch' title='Chinese'>
-              Chinese
+            <a class='switch' href='/?lang=en' title='English'>
+              English
             </a>
           </li>
         </ul>
@@ -162,11 +162,11 @@
         <div class='row'>
           <div class='span10'>
             <h3 id='phone'>
-              Instant Support Line: 1-408-796-8978
+              热线：1-408-796-8978
             </h3>
             <p>
-              &copy; 2011-2013 <a href="/" title="SVPrep">SVPrep, Inc.</a> All Rights Reserved.
-              &nbsp;<a href='/tos'>Terms of Service</a>&nbsp;&&nbsp;<a href='/privacy'>Privacy Policy</a>.
+              &copy; 2011-2013 <a href="/?lang=ch" title="SVPrep">SVPrep, Inc.</a> All Rights Reserved.
+              &nbsp;<a href='/tos'>Terms of Service</a>&nbsp;&&nbsp;<a href='/privacy?lang=ch'>Privacy Policy</a>.
             </p>
           </div>
           <!-- <div class='span3 ar' id='elsewhere-msg'>
